[package]
name = "otp"
version = "0.1.0"
authors = ["Prateek Nischal <PNischal@walmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bardecoder = "0.2.2"
image = "0.22.5"
url = "2.1.1"
ring = "0.16.15"
data-encoding = "2.3.0"
